libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__object_is_invalid_multiple.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mmalformed expression object[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:136:14[23m
    │
    ├─▶ [1munable to parse[22m
    │   ╰╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:514:14[23m
    │
    ├─▶ [1merror while parsing object entry[22m
    │   ╰╴at [3mlibs/@local/hql/cst/src/parse/json/util.rs:202:55[23m
    │
    ╰─▶ [1msignature object only allows for `sig` key, received `fn`[22m
        ├╴at [3mlibs/@local/hql/cst/src/parse/json/node_object.rs:431:22[23m
        ╰╴1 additional opaque attachment,
)
