libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__string_is_invalid.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Err(
    [1mexpected string to be either a path or signature[22m
    ├╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:163:10[23m
    ├╴1 additional opaque attachment
    │
    ╰─▶ [1m1234[22m
        ^
        Parsing Error: ContextError { context: [], cause: None }
        ╰╴at [3mlibs/@local/hql/cst/src/parse/json/node.rs:163:10[23m,
)
