libs/@local/hql/cst/src/parse/json/snapshots/hql_cst__parse__json__node__test__string_is_path-2.snap
---
source: libs/@local/hql/cst/src/parse/json/node.rs
expression: result
---
Ok(
    Node {
        expr: Path(
            Path(
                [
                    Symbol(
                        "foo",
                    ),
                    Symbol(
                        "bar",
                    ),
                ],
            ),
        ),
        span: 0..10,
    },
)
